fix service in index.php on mobile

--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -308,7 +308,11 @@
          font-size: 15px;
      }
      .page-home .sub-slider {
-         margin-top: -50px;
+         margin-top: -65px;
+         padding: 0 6px;
+     }
+     .page-home .sub-slider .slide-item {
+        margin-bottom: 0;
      }
      .click-to-phone-porfolio {
          display: block;
